# TekEngine

./: .gitattributes  .gitignore  .gitmodules  Build.lua  Directory.build.props  README.md  TekEngine.sln
Engine/: CMakeLists.txt  Config.hpp  TekEngine.hpp  main.cpp
Engine/Tek/: Config.hpp  Shader.cpp  Shader.hpp
Engine/Tek/Core/: Application.cpp  Application.hpp  Config.hpp  EditorCamera.cpp  EditorCamera.hpp  GameObject.cpp  GameObject.hpp  Logger.cpp  Logger.hpp  Math.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  Window.cpp  Window.hpp
Engine/Tek/Core/Audio/: AudioManager.hpp
Engine/Tek/Core/Components/: Camera.cpp  Camera.hpp  Component.cpp  Component.hpp  Light.cpp  Light.hpp  Renderer.cpp  Renderer.hpp  Transform.cpp  Transform.hpp
Engine/Tek/Core/Math/: Quaternion.cpp  Quaternion.hpp
Engine/Tek/Core/Rendering/: LightManager.cpp  LightManager.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  RenderManager.cpp  RenderManager.hpp  Rendering.hpp  Shader.cpp  Shader.hpp  stb_img_wrapper.cpp  stb_img_wrapper.hpp
Engine/Tek/Shaders/: FullLightShader.frag  LitShader.frag  OmnidirectionalShadow.geom  OmnidirectionalShadow.vert  PBR.frag  SkyBox.frag  TestShader.frag  TestShader.vert  Texture.frag  Texture.vert  Transparent.vert  fullScreen.frag  fullScreen.vert  simpleDepthShader.frag
Resonance-Core/: Build-Core.lua  GeneratedReflection.h
Resonance-Core/Source/: Reon.h  reonpch.cpp  reonpch.h
Resonance-Core/Source/Platform/Windows/: WindowsInput.h  WindowsWindow.cpp
Resonance-Core/Source/REON/: Application.cpp  Application.h  Core.h  EditorCamera.cpp  EditorCamera.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Logger.cpp  Logger.h  MouseButtonCodes.h  ReflectionSystem.h  Window.h
Resonance-Core/Source/REON/AssetManagement/: Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h
Resonance-Core/Source/REON/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Resonance-Editor/: Build-Editor.lua
Resonance-Editor/Assets/Shaders/: CubeProjection.frag  CubeProjection.vert  DirectionalShadow.frag  DirectionalShadow.vert  IrradianceMap.frag  OmnidirectionalShadow.frag  OmnidirectionalShadow.geom  OmnidirectionalShadow.vert  PBR.frag  PBR.vert  PreFilter.frag  SkyBox.frag  SkyBox.vert  Texture.frag  Texture.vert  Transparent.frag  Transparent.vert  brdf.frag  brdf.vert  fullScreen.frag  fullScreen.vert
Resonance-Editor/Source/: App.cpp
Scripts/: GenerateReflectionData.bat
TekEngine-Core/: Build-Core.lua  Core.vcxproj  Core.vcxproj.filters
TekEngine-Core/Source/: Tek.h  tekpch.cpp  tekpch.h
TekEngine-Core/Source/Tek/: Application.cpp  Application.h  Core.h  EditorCamera.cpp  EditorCamera.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Logger.cpp  Logger.h  MouseButtonCodes.h  Window.h
TekEngine-Editor/: App.vcxproj  App.vcxproj.filters  Build-Editor.lua  Editor.vcxproj  imgui.ini
TekEngine-Editor/Assets/Shaders/: IrradianceMap.frag  OmnidirectionalShadow.frag  PBR.frag  PBR.vert  PreFilter.frag  SkyBox.frag  SkyBox.vert  Transparent.frag  brdf.frag  brdf.vert  fullScreen.frag
TekEngine-Editor/Source/: App.cpp
TekEngine-ReflectionTool/: Build-ReflectionTool.lua
TekEngine-Runtime/: Build-Runtime.lua  Runtime.vcxproj
Test/: Test.cpp
(+103 files in other folders)
